fix(css): reset letter-spacing

--- a/_sass/custom/components/required/typography.scss
+++ b/_sass/custom/components/required/typography.scss
@@ -9,10 +9,6 @@ html{
   -webkit-font-smoothing: antialiased;
 }
 
-h1,h2,h3,h4,.h1,.h2,.h3,.h4,.display-1,.display-2,.display-3,.display-4{
-  letter-spacing: -.03em;
-}
-
 h5,.h5{
   line-height: 1.5;
 }
